--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+Dolly 2.0 is an open-source, instruction-following large language model (LLM) suitable for research and commercial use.
+The model is based on the EleutherAI pythia model family and has 12 billion parameters.
+Fine-tuned on a new human-generated dataset called databricks-dolly-15k.
+The dataset contains 15,000 high-quality prompt/response pairs.
+Designed specifically for instruction tuning in LLMs.
+Created by over 5,000 Databricks employees during March and April 2023.
+Licensed under Creative Commons Attribution-ShareAlike 3.0 Unported License, allowing use, modification, or extension for any purpose, including commercial applications.
+Open-sourcing Dolly 2.0 aims to address issues of bias, accountability, and AI safety.
+Encourages diverse stakeholders to contribute to AI technology.
+Allows organizations to own their models without sharing sensitive data with third parties.
+Dolly 2.0's release is expected to seed follow-on works and further advancements in LLMs.
+To get started with Dolly 2.0, visit the Databricks Hugging Face page and the Dolly repo on databricks-labs to download the model weights and databricks-dolly-15k dataset.
