--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
-Dolly 2.0 is an open-source, instruction-following large language model (LLM) suitable for research and commercial use.
-The model is based on the EleutherAI pythia model family and has 12 billion parameters.
-Fine-tuned on a new human-generated dataset called databricks-dolly-15k.
-The dataset contains 15,000 high-quality prompt/response pairs.
-Designed specifically for instruction tuning in LLMs.
-Created by over 5,000 Databricks employees during March and April 2023.
-Licensed under Creative Commons Attribution-ShareAlike 3.0 Unported License, allowing use, modification, or extension for any purpose, including commercial applications.
-Open-sourcing Dolly 2.0 aims to address issues of bias, accountability, and AI safety.
-Encourages diverse stakeholders to contribute to AI technology.
-Allows organizations to own their models without sharing sensitive data with third parties.
-Dolly 2.0's release is expected to seed follow-on works and further advancements in LLMs.
-To get started with Dolly 2.0, visit the Databricks Hugging Face page and the Dolly repo on databricks-labs to download the model weights and databricks-dolly-15k dataset.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Oguz Akkas, ML/MLOPs Engoneer</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 50px;
+    }
+    h1 {
+      font-size: 36px;
+    }
+    p {
+      font-size: 18px;
+    }
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
+    li {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+    a {
+      text-decoration: none;
+      color: #3498db;
+    }
+    a:hover {
+      color: #2980b9;
+    }
+  </style>
+</head>
+<body>
+  <h1>OGUZ AKKAS</h1>
+  <p>
+    A brief introduction about yourself. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  </p>
+  <h2>Skills</h2>
+  <ul>
+    <li>Skill 1</li>
+    <li>Skill 2</li>
+    <li>Skill 3</li>
+  </ul>
+  <h2>Experience</h2>
+  <ul>
+    <li>Job title at Company Name - Year to Year</li>
+    <li>Job title at Company Name - Year to Year</li>
+  </ul>
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/yourlinkedin/" target="_blank">https://www.linkedin.com/in/yourlinkedin/</a></p>
+</body>
+</html>
