styles moved to file

--- a/index.html
+++ b/index.html
@@ -4,53 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Oguz Akkas, ML/MLOPs Engoneer</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 50px;
-    }
-    h1 {
-      font-size: 36px;
-    }
-    p {
-      font-size: 18px;
-    }
-    ul {
-      list-style-type: none;
-      padding-left: 0;
-    }
-    li {
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
-    a {
-      text-decoration: none;
-      color: #3498db;
-    }
-    a:hover {
-      color: #2980b9;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>OGUZ AKKAS</h1>
   <p>
-    A brief introduction about yourself. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    I am Machine Learning Engineer, experienced in Natural Language
+    Processing, Computer Vision, and Classical ML models, end to end
+    deployment, maintenance and monotitoring of models. I have created
+    ML platform that helps Data Scientist easily develop and deploy
+    models.  
+
   </p>
   <h2>Skills</h2>
   <ul>
-    <li>Skill 1</li>
-    <li>Skill 2</li>
-    <li>Skill 3</li>
+    <li>Machine Learning</li>
+    <li>ML OPs</li>
+    <li>Python</li>
   </ul>
   <h2>Experience</h2>
   <ul>
-    <li>Job title at Company Name - Year to Year</li>
-    <li>Job title at Company Name - Year to Year</li>
+    <li>Senior ML/MLOPs Engineer, Verana Health - March, 2022 - Present</li>
+    <li>Senior ML Software Engineer, Wind River - March, 2021 - March, 2022</li>
   </ul>
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/in/yourlinkedin/" target="_blank">https://www.linkedin.com/in/yourlinkedin/</a></p>
+  <p>Email: <a href="mailto:oakkas84@gmail.com">oakkas84@gmail.com</a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/oakkas/" target="_blank">https://www.linkedin.com/in/oakkas/</a></p>
 </body>
 </html>
