--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="research.html">Research</a></li>
+          <li><a href="contacts.html">Contacts</a></li>
+        </ul>
+      </nav>
   <h1>OGUZ AKKAS</h1>
   <p>
     I am Machine Learning Engineer, experienced in Natural Language
