--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="research.html">Research</a></li>
-          <li><a href="contacts.html">Contacts</a></li>
-        </ul>
-      </nav>
-  <h1>OGUZ AKKAS</h1>
+    <header>
+        <nav class="navbar">
+          <h1>Oguz Akkas</h1>
+          <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="research.html">Research</a></li>
+            <!-- <li><a href="contact.html">Contact</a></li> -->
+          </ul>
+        </nav>
+      </header>
   <p>
     I am Machine Learning Engineer, experienced in Natural Language
     Processing, Computer Vision, and Classical ML models, end to end
