have same nav bar

--- a/research.html
+++ b/research.html
@@ -7,13 +7,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="research.html">Research</a></li>
-      <li><a href="contact.html">Contacts</a></li>
-    </ul>
-  </nav>
+    <header>
+        <nav class="navbar">
+          <h1>Oguz Akkas</h1>
+          <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="research.html">Research</a></li>
+            <!-- <li><a href="contact.html">Contact</a></li> -->
+          </ul>
+        </nav>
+      </header>
   <h1>Welcome to the Research page</h1>
   <p>
     A team of scientists from Google Research and DeepMind have published an assessment of an AI tool designed to comprehend and generate language within a medical setting. The evaluation includes a proposed benchmark system to measure the performance of language applications across multiple aspects.
