--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <div class="banner">
-        <img src="banner.jpeg" alt="Banner Image" />
+        <img src="data_pipeline.gif" alt="Banner Image" />
     </div>
     <div class="intro">
         <p>
