banner and style update

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         </nav>
     </header>
     <div class="banner">
-        <img src="data_pipeline.gif" alt="Banner Image" />
+        <img src="data_pipeline.gif" alt="Banner Image1" />
+        <img src="ci-cd-for-ml-systems.gif" alt="Banner Image 2" />
     </div>
+    <div class="body">
     <div class="intro">
         <p>
             Experienced NLP Engineer, Data Scientist, and ML engineer
@@ -74,6 +76,7 @@
             </div>
         </div>
     </main>
+</div>
     <footer>
         <p>&copy; 2023 Oguz Akkas. All rights reserved.</p>
         <div class="contact">
