update class name

--- a/index.html
+++ b/index.html
@@ -24,59 +24,59 @@
         <img src="data_pipeline.gif" alt="Banner Image1" />
         <img src="ci-cd-for-ml-systems.gif" alt="Banner Image 2" />
     </div>
-    <div class="body">
-    <div class="intro">
-        <p>
-            Experienced NLP Engineer, Data Scientist, and ML engineer
-            with a demonstrated history of working in the academia,
-            government agency, private consulting firm and a start up
-            company. Skilled in NLP, Data Science, Machine Learning,
-            Deep Learning, Python. Strong research background with a
-            Master of Science (M.S.) focused in Industrial Engineering
-            from UW Madison and background in turning ideas into
-            production in a shortest time. 
-        </p>
+    <div class="main_body">
+            <div class="intro">
+                <p>
+                    Experienced NLP Engineer, Data Scientist, and ML engineer
+                    with a demonstrated history of working in the academia,
+                    government agency, private consulting firm and a start up
+                    company. Skilled in NLP, Data Science, Machine Learning,
+                    Deep Learning, Python. Strong research background with a
+                    Master of Science (M.S.) focused in Industrial Engineering
+                    from UW Madison and background in turning ideas into
+                    production in a shortest time. 
+                </p>
+            </div>
+            <main>
+                <div class="section">
+                    <div class="skills">
+                        <h2>Skills</h2>
+                        <ul>
+                            <li>MLOPs</li>
+                            <li>Machine Learning</li>
+                            <li>NLP/LLM</li>
+                            <li>Computer Vision</li>
+                            <li>Python</li>
+                        </ul>
+                    </div>
+                    <div class="experience">
+                        <h2>Experience</h2>
+                        <ul>
+                            <li>Senior ML/MLOPs Engineer, Verana Health - March, 2022 - Present</li>
+                            <li>Senior ML Software Engineer, Wind River - March, 2021 - March, 2022</li>
+                            <li>NLP Engineer, Pinnacol Assurance - Sep, 2019 - March, 2021</li>
+                            <li>Postdoctoral Researcher, CDC/NIOSH/WSD - Sep, 2018 - Sep, 2019</li>
+                            <li>Data Scientist, Blankenheim - Jan, 2017 - Sep, 2018</li>
+                            <li>Machine Learning Specialist, Augment - Jan, 2016 - Jan, 2017</li>
+                        </ul>
+                    </div>
+                    <div class="projects">
+                        <h2>Projects</h2>
+                        <ul>
+                            <li>MLOPs Infrastructure: Combined MLFlow, Kuberenetes,
+                                GitHub Actions to create an end-to-end ML Model
+                                deployment workflow, where Data Scientist develop models
+                                on their notebooks, and register managed MLFlow server and
+                                update config file with the version, push to Github repository.
+                                Then it through CI/CD it is deployed to Kuberenets cluster
+                                based model serving api. 
+                            </li>
+                            <!-- <li>Project 2: Description of Project 2</li> -->
+                        </ul>
+                    </div>
+                </div>
+            </main>
     </div>
-    <main>
-        <div class="section">
-            <div class="skills">
-                <h2>Skills</h2>
-                <ul>
-                    <li>MLOPs</li>
-                    <li>Machine Learning</li>
-                    <li>NLP/LLM</li>
-                    <li>Computer Vision</li>
-                    <li>Python</li>
-                </ul>
-            </div>
-            <div class="experience">
-                <h2>Experience</h2>
-                <ul>
-                    <li>Senior ML/MLOPs Engineer, Verana Health - March, 2022 - Present</li>
-                    <li>Senior ML Software Engineer, Wind River - March, 2021 - March, 2022</li>
-                    <li>NLP Engineer, Pinnacol Assurance - Sep, 2019 - March, 2021</li>
-                    <li>Postdoctoral Researcher, CDC/NIOSH/WSD - Sep, 2018 - Sep, 2019</li>
-                    <li>Data Scientist, Blankenheim - Jan, 2017 - Sep, 2018</li>
-                    <li>Machine Learning Specialist, Augment - Jan, 2016 - Jan, 2017</li>
-                </ul>
-            </div>
-            <div class="projects">
-                <h2>Projects</h2>
-                <ul>
-                    <li>MLOPs Infrastructure: Combined MLFlow, Kuberenetes,
-                         GitHub Actions to create an end-to-end ML Model
-                        deployment workflow, where Data Scientist develop models
-                        on their notebooks, and register managed MLFlow server and
-                        update config file with the version, push to Github repository.
-                        Then it through CI/CD it is deployed to Kuberenets cluster
-                        based model serving api. 
-                    </li>
-                    <!-- <li>Project 2: Description of Project 2</li> -->
-                </ul>
-            </div>
-        </div>
-    </main>
-</div>
     <footer>
         <p>&copy; 2023 Oguz Akkas. All rights reserved.</p>
         <div class="contact">
