--- a/index.html
+++ b/index.html
@@ -7,19 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-        <div class="name-image-container">
-          <img class="profile-image" src="oguz.jpeg" alt="Profile Image">
-          <h1>Oguz Akkas</h1>
-        </div>
-          <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <!-- <li><a href="contact.html">Contact</a></li> -->
-          </ul>
-        </nav>
-    </header>
+    <div id="navbar"></div>
     <div class="banner">
         <img src="data_pipeline.gif" alt="Banner Image1" />
         <img src="ci-cd-for-ml-systems.gif" alt="Banner Image 2" />
@@ -77,12 +65,11 @@
                 </div>
             </main>
     </div>
-    <footer>
-        <p>&copy; 2023 Oguz Akkas. All rights reserved.</p>
-        <div class="contact">
-            <p>Email: <a href="mailto:oakkas84@gmail.com">oakkas84@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/oakkas/" target="_blank">https://www.linkedin.com/in/oakkas/</a></p>
-        </div>
-    </footer>
+    <div id="footer"></div>
+    <script src="components.js"></script>
+<script>
+  document.getElementById("navbar").innerHTML = navbar;
+  document.getElementById("footer").innerHTML = footer;
+</script>
 </body>
 </html>
