--- a/research.html
+++ b/research.html
@@ -7,16 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-          <h1>Oguz Akkas</h1>
-          <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <!-- <li><a href="contact.html">Contact</a></li> -->
-          </ul>
-        </nav>
-      </header>
+    <div id="navbar"></div>
   <h1>Welcome to the Research page</h1>
   <p>
     A team of scientists from Google Research and DeepMind have published an assessment of an AI tool designed to comprehend and generate language within a medical setting. The evaluation includes a proposed benchmark system to measure the performance of language applications across multiple aspects.
@@ -37,5 +28,11 @@ The researchers emphasize that comprehension, recall of knowledge, and medical r
 
 In summary, the researchers acknowledge the promise of their findings but emphasize the complexity of the medical field and the need for further evaluations, particularly concerning fairness, equity, and bias. They point out that numerous limitations must be addressed before such models can be effectively implemented in clinical applications and suggest key areas for future research in their study.
   </p>
+  <div id="footer"></div>
+<script src="components.js"></script>
+<script>
+  document.getElementById("navbar").innerHTML = navbar;
+  document.getElementById("footer").innerHTML = footer;
+</script>
 </body>
 </html>
