--- a/research.html
+++ b/research.html
@@ -10,23 +10,7 @@
     <div id="navbar"></div>
   <h1>Welcome to the Research page</h1>
   <p>
-    A team of scientists from Google Research and DeepMind have published an assessment of an AI tool designed to comprehend and generate language within a medical setting. The evaluation includes a proposed benchmark system to measure the performance of language applications across multiple aspects.
-
-The researchers discuss the goals of their work, stating that while medicine is a field where language plays a crucial role in communication among clinicians, researchers, and patients, current AI models for medical applications have not fully leveraged language. They point out that present methods for evaluating models' clinical knowledge are mainly based on automated assessments on limited benchmarks, with no standard for evaluating model predictions and reasoning across a range of tasks.
-
-To address this, the team proposes a benchmark framework for human evaluation of model answers, considering factors such as accuracy, precision, potential harm, and bias. They pilot this framework for physician and lay user evaluation to gauge performance in areas like clinical consensus, likelihood and possible extent of harm, reading comprehension, recall of relevant clinical knowledge, valid reasoning manipulation, response completeness, bias potential, relevance, and usefulness.
-
-The researchers state that their human evaluations highlight significant limitations in current models, emphasizing the need for evaluation frameworks and method development in building safe and effective large language models (LLMs) for clinical use.
-
-Potential applications for language models, as mentioned by the researchers, include knowledge retrieval, clinical decision support, and summarization of essential findings.
-
-In their evaluation of PaLM, a 540-billion parameter LLM, they discovered that human evaluation identified critical response gaps in the application, prompting the team to implement "instruction prompt tuning" to better align LLMs with the safety-critical medical domain.
-
-The resulting model, Med-PaLM, reportedly performs well, with clinicians finding 92.6% of long-form answers to be consistent with scientific consensus, comparable to clinician-generated answers (92.9%).
-
-The researchers emphasize that comprehension, recall of knowledge, and medical reasoning improve with model scale and instruction prompt tuning, indicating the potential usefulness of LLMs in medicine. However, they stress the importance of developing thoughtful evaluation frameworks to measure progress, mitigate potential harms, and ensure alignment with clinical and societal values, particularly as LLMs may generate misleading medical information or exacerbate health disparities due to biases.
-
-In summary, the researchers acknowledge the promise of their findings but emphasize the complexity of the medical field and the need for further evaluations, particularly concerning fairness, equity, and bias. They point out that numerous limitations must be addressed before such models can be effectively implemented in clinical applications and suggest key areas for future research in their study.
+    <embed src="registry.py" type="application/pdf" width="100%" height="600px">
   </p>
   <div id="footer"></div>
 <script src="components.js"></script>
