--- a/research.html
+++ b/research.html
@@ -9,7 +9,7 @@
 <body>
     <div id="navbar"></div>
   <h1>Welcome to the Research page</h1>
-  <pre>
+  <pre class="code">
     <code>
       My Code
     </code>
