--- a/research.html
+++ b/research.html
@@ -10,7 +10,13 @@
     <div id="navbar"></div>
   <h1>Welcome to the Research page</h1>
   <pre class="code">
-    <code>
+    FEEDBACK
+    First and foremost, I must commend your hard work and dedication. Your enthusiasm and curiosity about diving deep into pipeline work are genuinely commendable. Your drive to learn and get hands-on has been clear throughout our project.
+
+However, I did want to mention a couple of areas where there's room for growth. While working on the pipelines, it's critical to maintain a keen attention to detail. Given the complexities involved, even minor oversights can lead to significant challenges down the line.
+
+Additionally, I noticed a few instances where some of the best practices I mentioned weren't fully incorporated. It's essential for us to be on the same page to ensure the effectiveness and stability of our pipelines. Open communication and active listening are crucial for collaborative projects like this.
+<!--     <code>
         import pytest
 from unittest.mock import MagicMock, patch
 from sagemaker_model_registry import SageMakerModelRegistry
@@ -79,7 +85,7 @@ def test_delete_model_package_group(mock_client, model_registry):
     )
     assert response == None
 
-    </code>
+    </code> -->
     </pre>
   <div id="footer"></div>
 <script src="components.js"></script>
