--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="banner">
         <img src="data_pipeline.gif" alt="Banner Image1" />
         <img src="ci-cd-for-ml-systems.gif" alt="Banner Image 2" />
+        <img src="mlops_image.gif" alt="Banner Image 3" />
     </div>
     <div class="main_body">
             <div class="intro">
